k8s/vote-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote
spec:
  replicas: 1
  selector: { matchLabels: { app: vote } }
  template:
    metadata:
      labels: { app: vote }
    spec:
      containers:
        - name: vote
          image: docker.io/saief057/vote:latest
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet: { path: "/", port: 80 }
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet: { path: "/", port: 80 }
            initialDelaySeconds: 15
            periodSeconds: 10
