k8s/redis-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec:
  selector: { app: redis }
  ports:
    - port: 6379
      targetPort: 6379
