k8s/vote-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: vote-service
spec:
  selector: { app: vote }
  ports:
    - port: 80
      targetPort: 80
